# bbk

./: .gitignore  Cargo.toml  build.rs  readme.md
cad/: bbk.scad  bbk_frame.stl  bbk_wheels.stl
cad/lib/: 9161c.scad  gears.scad
examples/: robot.rs
pcb/: MP2667GG-xxxx-Z.kicad_mod  USB_C_Receptacle_JAE_DX07S016JA3R1500.kicad_mod  bbk.ioc  bbk.kicad_pcb  bbk.kicad_prl  bbk.kicad_pro  bbk.kicad_sch  bbk.kicad_sch-bak  bbk.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
pcb/bom/: ibom.html
src/: esc.rs  ir.rs  lib.rs  main.rs  motor.rs  pins.rs  platform.rs
